--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -164,6 +164,7 @@
     "# a = [[ 0.23651224  0.41900661  0.84869417  0.46456022]\n",
     "# [ 0.60771087  0.9043845   0.36603285  0.55746074]]\n",
     "\n",
+    "#axis=0 列 axis=1 行\n",
     "print(\"sum =\",np.sum(a,axis=1))\n",
     "# sum = [ 1.96877324  2.43558896]\n",
     "\n",
