--- a/TOKYOHOUSEPRICE/tokyohouseprice.ipynb
+++ b/TOKYOHOUSEPRICE/tokyohouseprice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,269 +16,16 @@
     "#     print(f\"Detected encoding: {encoding}\")\n",
     "\n",
     "# 使用检测到的编码读取文件\n",
-    "df = pd.read_csv('../DataSet/Tokyo_20053_20234.csv', encoding=\"cp932\")"
+    "df = pd.read_csv('../DataSet/Tokyo house price.csv', encoding=\"cp932\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>???</th>\n",
-       "      <th>???i????</th>\n",
-       "      <th>?n??</th>\n",
-       "      <th>?s?????R?[?h</th>\n",
-       "      <th>?s???{????</th>\n",
-       "      <th>?s??????</th>\n",
-       "      <th>?n?於</th>\n",
-       "      <th>???w?F????</th>\n",
-       "      <th>???w?F?????i???j</th>\n",
-       "      <th>??????i?i???z?j</th>\n",
-       "      <th>...</th>\n",
-       "      <th>?p?r</th>\n",
-       "      <th>???????p??I</th>\n",
-       "      <th>?O????H?F????</th>\n",
-       "      <th>?O????H?F???</th>\n",
-       "      <th>?O????H?F?????i???j</th>\n",
-       "      <th>?s?s?v??</th>\n",
-       "      <th>????????i???j</th>\n",
-       "      <th>?e????i???j</th>\n",
-       "      <th>???????</th>\n",
-       "      <th>????????</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>??n(?y?n?????)</td>\n",
-       "      <td>?s???Y??????i???</td>\n",
-       "      <td>????n</td>\n",
-       "      <td>13101</td>\n",
-       "      <td>?????s</td>\n",
-       "      <td>???c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>4</td>\n",
-       "      <td>340000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>?Z??</td>\n",
-       "      <td>?Z??</td>\n",
-       "      <td>??</td>\n",
-       "      <td>??</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>????</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>2023?N??2?l????</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>??n(?y?n?????)</td>\n",
-       "      <td>?s???Y??????i???</td>\n",
-       "      <td>????n</td>\n",
-       "      <td>13101</td>\n",
-       "      <td>?????s</td>\n",
-       "      <td>???c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>1</td>\n",
-       "      <td>890000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>??????</td>\n",
-       "      <td>??????</td>\n",
-       "      <td>?k??</td>\n",
-       "      <td>??</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>????</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>2022?N??2?l????</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>??n(?y?n?????)</td>\n",
-       "      <td>?s???Y??????i???</td>\n",
-       "      <td>????n</td>\n",
-       "      <td>13101</td>\n",
-       "      <td>?????s</td>\n",
-       "      <td>???c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>2</td>\n",
-       "      <td>880000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>???????A?X??</td>\n",
-       "      <td>??????</td>\n",
-       "      <td>??</td>\n",
-       "      <td>??</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>????</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>700.0</td>\n",
-       "      <td>2021?N??4?l????</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>??n(?y?n?????)</td>\n",
-       "      <td>?s???Y??????i???</td>\n",
-       "      <td>????n</td>\n",
-       "      <td>13101</td>\n",
-       "      <td>?????s</td>\n",
-       "      <td>???c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>2</td>\n",
-       "      <td>400000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>???????A?X??</td>\n",
-       "      <td>?X??</td>\n",
-       "      <td>?k??</td>\n",
-       "      <td>??</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>????</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>2019?N??2?l????</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>??n(?y?n?????)</td>\n",
-       "      <td>?s???Y??????i???</td>\n",
-       "      <td>????n</td>\n",
-       "      <td>13101</td>\n",
-       "      <td>?????s</td>\n",
-       "      <td>???c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>??c??</td>\n",
-       "      <td>1</td>\n",
-       "      <td>180000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>?????Z??A??????</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>??</td>\n",
-       "      <td>?s??</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>????</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>700.0</td>\n",
-       "      <td>2019?N??2?l????</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              ???          ???i????   ?n??  ?s?????R?[?h ?s???{???? ?s??????  \\\n",
-       "0  ??n(?y?n?????)  ?s???Y??????i???  ????n         13101     ?????s   ???c??   \n",
-       "1  ??n(?y?n?????)  ?s???Y??????i???  ????n         13101     ?????s   ???c??   \n",
-       "2  ??n(?y?n?????)  ?s???Y??????i???  ????n         13101     ?????s   ???c??   \n",
-       "3  ??n(?y?n?????)  ?s???Y??????i???  ????n         13101     ?????s   ???c??   \n",
-       "4  ??n(?y?n?????)  ?s???Y??????i???  ????n         13101     ?????s   ???c??   \n",
-       "\n",
-       "    ?n?於 ???w?F???? ???w?F?????i???j  ??????i?i???z?j  ...             ?p?r  \\\n",
-       "0  ??c??      ??c??                4        340000000  ...             ?Z??   \n",
-       "1  ??c??      ??c??                1        890000000  ...           ??????   \n",
-       "2  ??c??      ??c??                2        880000000  ...     ???????A?X??   \n",
-       "3  ??c??      ??c??                2        400000000  ...     ???????A?X??   \n",
-       "4  ??c??      ??c??                1        180000000  ...  ?????Z??A??????   \n",
-       "\n",
-       "  ???????p??I  ?O????H?F???? ?O????H?F??? ?O????H?F?????i???j ?s?s?v??  \\\n",
-       "0        ?Z??             ??           ??                 4.0     ????   \n",
-       "1      ??????           ?k??           ??                11.0     ????   \n",
-       "2      ??????             ??           ??                 6.0     ????   \n",
-       "3        ?X??           ?k??           ??                 4.0     ????   \n",
-       "4         NaN             ??         ?s??                27.0     ????   \n",
-       "\n",
-       "  ????????i???j ?e????i???j          ??????? ????????  \n",
-       "0          80.0       500.0  2023?N??2?l????      NaN  \n",
-       "1          80.0       500.0  2022?N??2?l????      NaN  \n",
-       "2          80.0       700.0  2021?N??4?l????      NaN  \n",
-       "3          80.0       500.0  2019?N??2?l????      NaN  \n",
-       "4          80.0       700.0  2019?N??2?l????      NaN  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(303923, 28)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['???', '???i????', '?n??', '?s?????R?[?h', '?s???{????', '?s??????',\n",
-       "       '?n?於', '???w?F????', '???w?F?????i???j', '??????i?i???z?j', '??P??',\n",
-       "       '??ρi?u?j', '??????i?i?u?P???j', '?y?n??`??', '???.1', '??????ρi?u?j',\n",
-       "       '???z?N', '??????\\??', '?p?r', '???????p??I', '?O????H?F????',\n",
-       "       '?O????H?F???', '?O????H?F?????i???j', '?s?s?v??', '????????i???j',\n",
-       "       '?e????i???j', '???????', '????????'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -314,16 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 使用独热编码处理分类变量\n",
-    "df = pd.get_dummies(df, columns=['種類', '価格情報区分', '地域', '都道府県名', '市区町村名', '地区名', '最寄駅：名称', '用途', '今後の利用目的', '前面道路：方位', '前面道路：種類', '都市計画'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df.head()"
    ]
   },
@@ -333,7 +70,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns.value_counts()"
+    "# 筛选出'取引時期'列中包含2018年至2023年的数据\n",
+    "df['取引時期'] = df['取引時期'].astype(str)\n",
+    "filtered_df = df[df['取引時期'].str.contains(r'202[0-3]|201[8-9]', regex=True)]\n",
+    "filtered_df = filtered_df .query('種類 == \"宅地(土地と建物)\"')\n",
+    "filtered_df = filtered_df .query('種類 == \"宅地(土地と建物)\"')\n",
+    "filtered_df = filtered_df .query('今後の利用目的 == \"住宅\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_columns = ['最寄駅：距離（分）', '取引価格（総額）', '面積（㎡）','建築年', '建物の構造','地区名']\n",
+    "selected_df = df[selected_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "# 确保列为字符串类型\n",
+    "for column in [ '建物の構造']:\n",
+    "    df[column] = selected_df[column].astype(str)\n",
+    "\n",
+    "# 创建LabelEncoder对象\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# 对每个object列进行标签编码\n",
+    "for column in [ '建物の構造']:\n",
+    "    selected_df[column] = label_encoder.fit_transform(selected_df[column])\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_df = selected_df.dropna()\n",
+    "#astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 提取建筑年份的年份部分并转换为整数\n",
+    "selected_df['建築年'] = selected_df['建築年'].str.extract('(\\d+)')\n",
+    "selected_df = selected_df.dropna()\n",
+    "selected_df['建築年'] = selected_df['建築年'].astype(int)\n",
+    "# selected_df['建築年'] = selected_df['建築年'].astype(int)\n",
+    "# selected_df['建筑年限'] = 2024 - selected_df['建築年']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_df.to_csv('exported_data2.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "# 使用OneHotEncoder进行独热编码\n",
+    "one_hot_encoder = OneHotEncoder(sparse=False)\n",
+    "encoded_features = one_hot_encoder.fit_transform(selected_df[['地区名']])\n",
+    "\n",
+    "# 获取独热编码后的特征名\n",
+    "feature_names = one_hot_encoder.get_feature_names_out(['地区名'])\n",
+    "\n",
+    "# 将编码后的特征转换为DataFrame\n",
+    "encoded_df = pd.DataFrame(encoded_features, columns=feature_names)\n",
+    "\n",
+    "# 合并原始数据和独热编码后的数据\n",
+    "df_onehot = pd.concat([selected_df, encoded_df], axis=1)"
    ]
   },
   {
