--- a/TOKYOHOUSEPRICE/test.ipynb
+++ b/TOKYOHOUSEPRICE/test.ipynb
@@ -244,6 +244,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'tokyo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m     location \u001b[38;5;241m=\u001b[39m geolocator\u001b[38;5;241m.\u001b[39mgeocode(address)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m location\u001b[38;5;241m.\u001b[39mlatitude, location\u001b[38;5;241m.\u001b[39mlongitude\n\u001b[0;32m----> 9\u001b[0m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatitude\u001b[39m\u001b[38;5;124m'\u001b[39m], data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlongitude\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39mdata[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtokyo\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(get_lat_long))\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'tokyo'"
+     ]
+    }
+   ],
+   "source": [
+    "import geopy\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"geoapiExercises\")\n",
+    "def get_lat_long(address):\n",
+    "    location = geolocator.geocode(address)\n",
+    "    return location.latitude, location.longitude\n",
+    "\n",
+    "data['latitude'], data['longitude'] = zip(*data['tokyo'].apply(get_lat_long))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 2.16.1\n",
+      "TensorBoard version: 2.16.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import tensorboard as tb\n",
+    "\n",
+    "print(f'TensorFlow version: {tf.__version__}')\n",
+    "print(f'TensorBoard version: {tb.__version__}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "一番町, 千代田区, 東京都, 102-0082, 日本\n",
+      "35.68735\n",
+      "139.741509\n"
+     ]
+    }
+   ],
+   "source": [
+    "from geopy.geocoders import Nominatim\n",
+    "geolocator = Nominatim(user_agent=\"test\") \n",
+    "location = geolocator.geocode(\"(一番町)\") # 検索\n",
+    "\n",
+    "print(location.address)       #住所\n",
+    "print(location.latitude)      #緯度\n",
+    "print(location.longitude)     #経度"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
