--- a/Clustering/LogicRegression.ipynb
+++ b/Clustering/LogicRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "labels = df.target\n",
     "true_k = len(np.unique(labels)) ## This should be 3 in this example\n",
@@ -43,16 +51,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In regards to fractal commpression, I have seen 2 fractal compressed \"movies\".\n",
+      "They were both fairly impressive.  The first one was a 64 gray scale \"movie\" of\n",
+      "Casablanca, it was 1.3MB and had 11 minutes of 13 fps video.  It was a little\n",
+      "grainy but not bad at all.  The second one I saw was only 3 minutes but it\n",
+      "had 8 bit color with 10fps and measured in at 1.2MB.\n",
+      "\n",
+      "I consider the fractal movies a practical thing to explore.  But unlike many \n",
+      "other formats out there, you do end up losing resolution.  I don't know what\n",
+      "kind of software/hardware was used for creating the \"movies\" I saw but the guy\n",
+      "that showed them to me said it took 5-15 minutes per frame to generate.  But as\n",
+      "I said above playback was 10 or more frames per second.  And how else could you\n",
+      "put 11 minutes on one floppy disk?\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.data[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +92,7 @@
     "'''\n",
     "这是开始提取特征，这里的特征是TFIDF特征。\n",
     "'''\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer # type: ignore\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer \n",
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
     "\n",
@@ -226,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
