--- a/TOKYOHOUSEPRICE/tokyohouseprice.ipynb
+++ b/TOKYOHOUSEPRICE/tokyohouseprice.ipynb
@@ -247,6 +247,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 定义一个函数来去除离群值\n",
+    "# 四分位距（IQR）方法是一种常用的检测离群值的方法。它利用数据的第一四分位数（Q1）和第三四分位数（Q3）来定义一个范围，任何超出该范围的值都被视为离群值。\n",
+    "def remove_outliers(df, column):\n",
+    "    Q1 = df[column].quantile(0.25)\n",
+    "    Q3 = df[column].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    df_filtered = df[(df[column] >= lower_bound) & (df[column] <= upper_bound)]\n",
+    "    return df_filtered\n",
+    "\n",
+    "# 去除 '取引価格（総額）' 的离群值\n",
+    "data_cleaned = remove_outliers(selected_df, '取引価格（総額）')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义一个函数来去除离群值\n",
+    "# Z-Score 方法是通过计算每个数据点与均值的标准差来检测离群值的。通常，Z-Score 大于 3 或小于 -3 的数据点被视为离群值。\n",
+    "def remove_outliers_zscore(df, column):\n",
+    "    mean = df[column].mean()\n",
+    "    std = df[column].std()\n",
+    "    z_scores = (df[column] - mean) / std\n",
+    "    df_filtered = df[np.abs(z_scores) < 3]\n",
+    "    return df_filtered\n",
+    "\n",
+    "# 去除 '取引価格（総額）' 的离群值\n",
+    "data_cleaned = remove_outliers_zscore(data_cleaned, '取引価格（総額）')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cleaned.to_csv('exported_data2.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 7ms/step - loss: 0.7538 - val_loss: 0.6523\n",
+      "Epoch 2/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6868 - val_loss: 0.6377\n",
+      "Epoch 3/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 7ms/step - loss: 0.6831 - val_loss: 0.6358\n",
+      "Epoch 4/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6781 - val_loss: 0.6328\n",
+      "Epoch 5/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6790 - val_loss: 0.6408\n",
+      "Epoch 6/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6736 - val_loss: 0.6389\n",
+      "Epoch 7/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6753 - val_loss: 0.6317\n",
+      "Epoch 8/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 7ms/step - loss: 0.6759 - val_loss: 0.6356\n",
+      "Epoch 9/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6761 - val_loss: 0.6388\n",
+      "Epoch 10/10\n",
+      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6738 - val_loss: 0.6299\n",
+      "Validation MSE: 0.6299\n",
+      "\u001b[1m1012/1012\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 767us/step\n",
+      "MSE: 254082706387450.0312\n",
+      "MAE: 12282140.3154\n",
+      "RMSE: 15939971.9695\n",
+      "R2: 0.3599\n",
+      "MAPE: 38.65%\n"
+     ]
+    }
+   ],
+   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -256,9 +353,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from tensorflow.keras.optimizers import Adam\n",
+    "from datetime import datetime\n",
+    "import os\n",
     "\n",
-    "X = selected_df.drop('取引価格（総額）', axis=1)\n",
-    "y = selected_df['取引価格（総額）']\n",
+    "\n",
+    "X = data_cleaned.drop('取引価格（総額）', axis=1)\n",
+    "y = data_cleaned['取引価格（総額）']\n",
     "\n",
     "# 数据标准化处理\n",
     "scaler_X = StandardScaler()\n",
@@ -289,8 +389,14 @@
     "# 编译模型，使用 MSE 损失函数\n",
     "model.compile(loss='mean_squared_error', optimizer=optimizer)\n",
     "\n",
+    "# 生成当前时间的字符串\n",
+    "current_time = datetime.now().strftime(\"%Y%m%d-%H%M\")\n",
+    "\n",
+    "# 创建日志目录名称\n",
+    "log_dir = os.path.join('logs', current_time)\n",
+    "\n",
     "# TensorBoard 回调函数\n",
-    "tensorboard_callback = TensorBoard(log_dir='./logs', histogram_freq=1)\n",
+    "tensorboard_callback = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "# 训练模型batch_size=32,\n",
@@ -335,13 +441,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from datetime import datetime\n",
+    "import os\n",
     "\n",
     "# 将价格转换为类别标签\n",
     "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(selected_df['取引価格（総額）'])\n",
+    "y_encoded = label_encoder.fit_transform(data_cleaned['取引価格（総額）'])\n",
     "\n",
     "# 数据标准化处理\n",
-    "X = selected_df.drop('取引価格（総額）', axis=1)\n",
+    "X = data_cleaned.drop('取引価格（総額）', axis=1)\n",
     "y = y_encoded\n",
     "\n",
     "scaler_X = StandardScaler()\n",
@@ -378,8 +486,14 @@
     "# 编译模型，使用交叉熵损失函数\n",
     "model.compile(loss='sparse_categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
     "\n",
+    "# 生成当前时间的字符串\n",
+    "current_time = datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "\n",
+    "# 创建日志目录名称\n",
+    "log_dir = os.path.join('logs', current_time)\n",
+    "\n",
     "# TensorBoard 回调函数\n",
-    "tensorboard_callback = TensorBoard(log_dir='./logs', histogram_freq=1)\n",
+    "tensorboard_callback = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "# 训练模型\n",
