--- a/TOKYOHOUSEPRICE/tokyohouseprice.ipynb
+++ b/TOKYOHOUSEPRICE/tokyohouseprice.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_columns = ['最寄駅：距離（分）', '取引価格（総額）', '面積（㎡）','建築年', '建物の構造','地区名']\n",
+    "selected_columns = ['最寄駅：距離（分）', '取引価格（総額）', '面積（㎡）','建築年', '建物の構造','地区名',\"建ぺい率（％）\",\"容積率（％）\"]\n",
     "selected_df = df[selected_columns]"
    ]
   },
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_df.to_csv('exported_data2.csv', index=False, encoding='utf-8')"
+    "selected_df.to_csv('exported_data3.csv', index=False, encoding='utf-8')"
    ]
   },
   {
@@ -268,6 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "# 定义一个函数来去除离群值\n",
     "# Z-Score 方法是通过计算每个数据点与均值的标准差来检测离群值的。通常，Z-Score 大于 3 或小于 -3 的数据点被视为离群值。\n",
     "def remove_outliers_zscore(df, column):\n",
@@ -283,23 +284,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_cleaned.to_csv('exported_data2.csv', index=False, encoding='utf-8')"
+    "# 定义一个函数来去除离群值\n",
+    "# Z-Score 方法是通过计算每个数据点与均值的标准差来检测离群值的。通常，Z-Score 大于 3 或小于 -3 的数据点被视为离群值。\n",
+    "def remove_outliers_zscore(df, column):\n",
+    "    mean = df[column].mean()\n",
+    "    std = df[column].std()\n",
+    "    z_scores = (df[column] - mean) / std\n",
+    "    df_filtered = df[np.abs(z_scores) < 3]\n",
+    "    return df_filtered\n",
+    "\n",
+    "# 去除 '取引価格（総額）' 的离群值\n",
+    "data_cleaned = remove_outliers_zscore(data_cleaned, '面積（㎡）')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义一个函数来去除离群值\n",
+    "# 四分位距（IQR）方法是一种常用的检测离群值的方法。它利用数据的第一四分位数（Q1）和第三四分位数（Q3）来定义一个范围，任何超出该范围的值都被视为离群值。\n",
+    "def remove_outliers(df, column):\n",
+    "    Q1 = df[column].quantile(0.25)\n",
+    "    Q3 = df[column].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    df_filtered = df[(df[column] >= lower_bound) & (df[column] <= upper_bound)]\n",
+    "    return df_filtered\n",
+    "\n",
+    "# 去除 '取引価格（総額）' 的离群值\n",
+    "data_cleaned = remove_outliers(selected_df, '面積（㎡）')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义一个函数来去除离群值\n",
+    "# 四分位距（IQR）方法是一种常用的检测离群值的方法。它利用数据的第一四分位数（Q1）和第三四分位数（Q3）来定义一个范围，任何超出该范围的值都被视为离群值。\n",
+    "def remove_outliers(df, column):\n",
+    "    Q1 = df[column].quantile(0.25)\n",
+    "    Q3 = df[column].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    df_filtered = df[(df[column] >= lower_bound) & (df[column] <= upper_bound)]\n",
+    "    return df_filtered\n",
+    "\n",
+    "# 去除 '取引価格（総額）' 的离群值\n",
+    "data_cleaned = remove_outliers(selected_df, '建築年')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cleaned = data_cleaned[data_cleaned['取引価格（総額）'] <= 100000000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cleaned = data_cleaned[data_cleaned['建築年'] > 1968]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cleaned = data_cleaned[data_cleaned['面積（㎡）'] < 200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cleaned = data_cleaned[data_cleaned['最寄駅：距離（分）'] < 30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cleaned.to_csv('exported_data5.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/50\n"
      ]
     },
     {
@@ -314,32 +412,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 7ms/step - loss: 0.7538 - val_loss: 0.6523\n",
-      "Epoch 2/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6868 - val_loss: 0.6377\n",
-      "Epoch 3/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 7ms/step - loss: 0.6831 - val_loss: 0.6358\n",
-      "Epoch 4/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6781 - val_loss: 0.6328\n",
-      "Epoch 5/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6790 - val_loss: 0.6408\n",
-      "Epoch 6/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6736 - val_loss: 0.6389\n",
-      "Epoch 7/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6753 - val_loss: 0.6317\n",
-      "Epoch 8/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 7ms/step - loss: 0.6759 - val_loss: 0.6356\n",
-      "Epoch 9/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6761 - val_loss: 0.6388\n",
-      "Epoch 10/10\n",
-      "\u001b[1m4046/4046\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 6ms/step - loss: 0.6738 - val_loss: 0.6299\n",
-      "Validation MSE: 0.6299\n",
-      "\u001b[1m1012/1012\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 767us/step\n",
-      "MSE: 254082706387450.0312\n",
-      "MAE: 12282140.3154\n",
-      "RMSE: 15939971.9695\n",
-      "R2: 0.3599\n",
-      "MAPE: 38.65%\n"
+      "\u001b[1m3428/3428\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 9ms/step - loss: 1.0568 - r2_score: -39.1756 - val_loss: 0.7647 - val_r2_score: -34.6842\n",
+      "Epoch 2/50\n",
+      "\u001b[1m3428/3428\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 9ms/step - loss: 0.8072 - r2_score: -39.4750 - val_loss: 0.7177 - val_r2_score: -35.6996\n",
+      "Epoch 3/50\n",
+      "\u001b[1m1646/3428\u001b[0m \u001b[32m━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━\u001b[0m \u001b[1m15s\u001b[0m 9ms/step - loss: 0.7611 - r2_score: -40.3189"
      ]
     }
    ],
@@ -355,8 +432,9 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "from datetime import datetime\n",
     "import os\n",
+    "from tensorflow.keras import backend as K\n",
     "\n",
-    "\n",
+    "data_cleaned = pd.read_csv(\"./exported_data5.csv\")\n",
     "X = data_cleaned.drop('取引価格（総額）', axis=1)\n",
     "y = data_cleaned['取引価格（総額）']\n",
     "\n",
@@ -373,21 +451,31 @@
     "# 创建 Sequential 模型\n",
     "model = Sequential()\n",
     "\n",
+    "\n",
     "# 添加输入层和隐藏层\n",
     "model.add(Dense(128, input_dim=X_train.shape[1], activation='relu'))\n",
     "model.add(Dropout(0.5))  # 添加 dropout 防止过拟合\n",
+    "# 添加输入层和隐藏层\n",
+    "model.add(Dense(64, input_dim=X_train.shape[1], activation='relu'))\n",
+    "model.add(Dropout(0.5))  # 添加 dropout 防止过拟合\n",
     "\n",
     "# 添加更多隐藏层\n",
-    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dense(32, activation='relu'))\n",
     "model.add(Dropout(0.5))\n",
     "\n",
     "# 添加输出层，输出层不需要激活函数（默认是线性输出）\n",
-    "model.add(Dense(1, activation='linear'))  # 输出层只有一个神经元，用于预测价格\n",
+    "model.add(Dense(1, activation='linear'))  # 输出层只有一个神经元，用于预测\n",
     "\n",
-    "optimizer = Adam(learning_rate=0.001)\n",
+    "optimizer = Adam(learning_rate=0.0001)\n",
+    "\n",
+    "# 自定义 R² 评估函数\n",
+    "def r2_score(y_true, y_pred):\n",
+    "    ss_res = K.sum(K.square(y_true - y_pred)) \n",
+    "    ss_tot = K.sum(K.square(y_true - K.mean(y_true))) \n",
+    "    return 1 - ss_res / (ss_tot + K.epsilon())\n",
     "\n",
     "# 编译模型，使用 MSE 损失函数\n",
-    "model.compile(loss='mean_squared_error', optimizer=optimizer)\n",
+    "model.compile(loss='mean_squared_error', optimizer=optimizer, metrics=[r2_score])\n",
     "\n",
     "# 生成当前时间的字符串\n",
     "current_time = datetime.now().strftime(\"%Y%m%d-%H%M\")\n",
@@ -400,7 +488,7 @@
     "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "\n",
     "# 训练模型batch_size=32,\n",
-    "history = model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test), callbacks=[tensorboard_callback, early_stopping_callback])\n",
+    "history = model.fit(X_train, y_train, epochs=50, validation_data=(X_test, y_test), callbacks=[tensorboard_callback, early_stopping_callback])\n",
     "\n",
     "# 模型评估\n",
     "mse = model.evaluate(X_test, y_test, verbose=0)\n",
@@ -442,7 +530,9 @@
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.metrics import accuracy_score\n",
     "from datetime import datetime\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "import os\n",
+    "data_cleaned = pd.read_csv(\"./exported_data5.csv\")\n",
     "\n",
     "# 将价格转换为类别标签\n",
     "label_encoder = LabelEncoder()\n",
@@ -464,10 +554,10 @@
     "model = Sequential([\n",
     "    Dense(128, input_dim=X_train.shape[1], activation='relu'),\n",
     "    Dropout(0.2),\n",
-    "    # Dense(64, activation='relu'),\n",
-    "    # Dropout(0.2),\n",
-    "    # Dense(32, activation='relu'),\n",
-    "    # Dropout(0.2),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dropout(0.2),\n",
     "    Dense(len(np.unique(y)), activation='softmax')# 添加输出层，使用 softmax 激活函数\n",
     "])\n",
     "\n",
@@ -479,7 +569,6 @@
     "# model.add(Dense(64, activation='relu'))\n",
     "# model.add(Dropout(0.5))\n",
     "\n",
-    "  # 输出层有 len(np.unique(y)) 个神经元，对应类别数量\n",
     "\n",
     "optimizer = Adam(learning_rate=0.001)\n",
     "\n",
